@@ -47,9 +47,14 @@ fail2ban_config()
 
     perl -pi -e 's#PH_SSHD_LOGFILE#$ENV{SSHD_LOGFILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
     perl -pi -e 's#PH_RCM_LOGFILE#$ENV{RCM_LOGFILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
-    perl -pi -e 's#PH_DOVECOT_LOG_FILE#$ENV{DOVECOT_LOG_FILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
     perl -pi -e 's#PH_MAILLOG#$ENV{MAILLOG}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
     perl -pi -e 's#PH_SOGO_LOG_FILE#$ENV{SOGO_LOG_FILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
+
+    if [ X"${DOVECOT_USE_SYSLOG}" == X'YES' ]; then
+        perl -pi -e 's#PH_DOVECOT_LOG_FILE#$ENV{DOVECOT_SYSLOG_FILE_IMAP}\n\t\t$ENV{DOVECOT_SYSLOG_FILE_POP3}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
+    else
+        perl -pi -e 's#PH_DOVECOT_LOG_FILE#$ENV{DOVECOT_LOG_FILE}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
+    fi
 
     perl -pi -e 's#PH_FAIL2BAN_DISABLED_SERVICES#$ENV{FAIL2BAN_DISABLED_SERVICES}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
     perl -pi -e 's#PH_SSHD_PORT#$ENV{SSHD_PORT}#' ${FAIL2BAN_JAIL_LOCAL_CONF}
