@@ -23,7 +23,11 @@ first_valid_uid = PH_FIRST_VALID_UID
 last_valid_uid = PH_LAST_VALID_UID
 
 # Logging. Reference: http://wiki2.dovecot.org/Logging
-log_path = PH_LOG_PATH
+#
+# Use syslog
+syslog_facility = local5
+# Log file path if we use internal log system
+#log_path = PH_LOG_PATH
 
 # Debug
 #mail_debug = yes
@@ -260,15 +264,17 @@ protocol lda {
     # Reference: http://wiki2.dovecot.org/LDA
     mail_plugins = $mail_plugins sieve autocreate
     auth_socket_path = PH_DOVECOT_AUTH_MASTER_PATH
-    log_path = PH_DOVECOT_SIEVE_LOG_FILE
     lda_mailbox_autocreate = yes
     lda_mailbox_autosubscribe = yes
     postmaster_address = root
+
+    # Log file path if we use internal log system
+    #log_path = PH_DOVECOT_SIEVE_LOG_FILE
 }
 
 protocol lmtp {
-    # Log file
-    log_path = PH_DOVECOT_LMTP_LOG_FILE
+    # Log file path if we use internal log system
+    #log_path = PH_DOVECOT_LMTP_LOG_FILE
 
     # Plugins
     mail_plugins = quota sieve
